Set orientation queries for landing banner to prevent overflow in landscape

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,11 +80,11 @@ h2 {
 }
 
 h3 {
-  font-size: clamp(1.5rem, 5vw, 2.5rem)
+  font-size: clamp(1.5rem, 4.5vw, 2.5rem)
 }
 
 h4 {
-  font-size: clamp(1.2rem, 4.5vw, 1.8rem);
+  font-size: clamp(1.2rem, 4vw, 1.8rem);
 }
 
 h5 {
@@ -185,19 +185,18 @@ nav {
 
 /* MAIN CONTENT Mobile Format*/
 main {
-  margin-top: 75px;
+  margin-top: 81.59px;
   /* Pushing footer down */
   flex: 1 0 auto;
   background-color: cornsilk;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* text-align: center; */
 }
 
 /* Banner section on the landing page */
 .banner-landing {
-  height: 75vh;
+  height: max(320px, 75vh); /*Set to avoid overflow in landscape mode*/
   width: 100%;
   position: relative;
   text-align: center;
@@ -230,21 +229,31 @@ to control image filters w/o affecting the headings and paragraphs */
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* max-width: 45%; */
-  /* backdrop-filter: blur(10px);
-  background: transparent; */
   background-color: #f2e20597;
+  max-height: 100%;
 }
 
 .banner-landing--text h2 {
   padding: 1rem 1rem;
+  /* Set in ch to prevent from stretching into one line */
   max-width: 20ch;
+
+  /*Set to avoid overflow in landscape mode*/
+  @media (orientation: landscape) {
+    font-size: 2.5rem;
+  }
+
 }
 
 .banner-landing--text p {
-  font-size: clamp(1.5rem, 2vw + 0.5rem, 2rem);
+  font-size: clamp(1.2rem, 2vw + 0.5rem, 2rem);
   padding: 0 1rem;
   max-width: 30ch;
+
+  /*Set to avoid overflow in landscape mode*/
+  @media (orientation: landscape) {
+    font-size: 1.2rem;
+  }
 }
 
 /* Shaping button on the landing banner */
@@ -259,6 +268,11 @@ to control image filters w/o affecting the headings and paragraphs */
   border: none;
   font-size: clamp(0.8rem, 2vw + 0.5rem, 1.3rem);
   border-radius: 10px;
+
+  @media (orientation: landscape) {
+    font-size: 1.2rem;
+  }
+
 }
 
 .banner-landing--text a:hover {
